--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,27 +1,20 @@
 [buildout]
-extends = 
-    https://raw.github.com/imatem/matem.fsdextender/master/plone-4.3.x.cfg
-#    https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
-    https://raw.github.com/hvelarde/qa/master/tools.cfg
+extends =
+    https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
 
-extensions = buildout.dumppickedversions
+extensions =
+    buildout.dumppickedversions
 
 package-name = matem.congresos
 package-extras = [test]
 parts +=
     omelette
-    codeintel
 
-eggs += 
-    plone.reload
-    Products.PDBDebugMode
+eggs +=
 
 package-minimum-test-coverage = 70
 package-languages = es
 
-parts -=
-    dependencychecker
-    zptlint
 
 [omelette]
 recipe = collective.recipe.omelette
@@ -33,8 +26,6 @@ dependent-scripts = true
 interpreter = zopepy
 eggs = matem.congresos [develop]
 
-[codeintel]
-recipe = corneti.recipes.codeintel
-eggs = ${instance:eggs}
-
 [versions]
+setuptools==33.1.1
+zc.buildout==2.9.5
