--- a/.gitignore
+++ b/.gitignore
@@ -8,14 +8,15 @@
 bin/
 buildout-cache/
 develop-eggs/
-docs/build/
 eggs/
 htmlcov/
 include/
 lib/
 local/
+node_modules/
 parts/
 src/*
+dist/*
 test.plone_addon/
 var/
 # files
@@ -26,6 +27,9 @@ log.html
 output.xml
 pip-selfcheck.json
 report.html
+.vscode/
+.tox/
+reports/
 # excludes
 !.coveragerc
 !.editorconfig
@@ -33,4 +37,4 @@ report.html
 !.gitignore
 !.gitkeep
 !.travis.yml
-!src/matem
+!src/imtheme
